<resources>
    <string name="app_name">Pills Manager</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">Usuario</string>
    <string name="title_search">Catalogo</string>
    <string name="title_market">Farmacias</string>
    <string name="title_medicine">Medicamentos</string>
    <string name="title_AddPills">Nueva Pastilla</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">contrasena</string>
    <string name="logIn">Entrar</string>
</resources>
