<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_medicine"
        android:icon="@drawable/pill"
        android:title="@string/title_medicine" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/store"
        android:title="@string/title_market" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/account"
        android:title="@string/title_user" />

</menu>
